[project]
name = "st-aeb-proxy"
version = "1.1.5"
description = "SmartThings Custom AEB Proxy Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "cryptography>=42.0.0",
    "paho-mqtt>=1.6.1,<2.0.0",
    "zeroconf>=0.132.0",
    "requests>=2.31.0",
]

[tool.uv]
dev-dependencies = []
